UI/UX improvements and style adjustments - Login/Register Page: Added scrollbar for the register ang login page to fix the responsiveness for smaller screen. - CompleteProfile: Modified the nav button - Profile/Edit: made the button smaller - Dashboard/UserDashboard: fixed the alignment of the streak icon
Detailed:
Enhanced navigation buttons and tooltips in `CompleteProfile.cshtml`. Updated form field requirements in `Edit.cshtml`. Added new stylesheets and icons in `_Layout.cshtml`. Adjusted various CSS files for better responsiveness and dynamic height adjustments. Enabled vertical scrolling in `login.css` and `register.css`.

--- a/GedsiHub/wwwroot/css/login.css
+++ b/GedsiHub/wwwroot/css/login.css
@@ -5,12 +5,12 @@
     width: 100%;
     height: 100vh;
     font-family: Poppins, sans-serif;
-    margin: 0;
     background: url("/images/login-bg.jpeg");
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
     color: #464040;
+    overflow: auto;
 }
 
 .login-con {
@@ -22,7 +22,7 @@
     background: rgba(255, 255, 255, 0.7);
     box-shadow: 0px 0px 10px rgba(33,37,41,0.33);
     padding: 150px 40px;
-    overflow: hidden;
+    overflow: auto;
 }
 
 .login-con text-danger {
